app/assets/stylesheets/rules.css
/*
  Place all the styles related to the matching controller here.
  They will automatically be included in application.css.
*/

.onError {
    border-color: red;
}

.policy_box {
    padding-right:3.7em;
    padding-left:1.1em;
}

.service_box {
    padding-right:2.9em;
}

.ruleset_box {
    padding-right:2.85em;
}

.input-select{
    height:28px;font-size:12px; border-right:0px;
    margin: 0;
    padding: 5px 10px;
}
.input-select-include{
    height:28px;font-size:12px;
    top: 0;
    bottom: 0;
    margin-left: -2px;
    padding: 0;
}

.dropdown-menu-rules{
    font-size: 12px;
}
.dropdown-menu-rules > li > a{
    padding: 3px 2px 2px 6px;
}

.back_btn_rule {
    padding-top:15px;
}

.rule_docs_warning {
    background-color: #e0e0e0;
    border-color: #f0ad4e;
    color: #e48e11;
    border-radius: 1px;
    /*outline: 2px solid #a94442;*/
    box-shadow: 0 0 0 2pt #F0A219;
    margin-top: -4px;
}

